fix: increase Telegram bubble icon size for better visibility

--- a/src/components/TelegramBubble/TelegramBubble.module.scss
+++ b/src/components/TelegramBubble/TelegramBubble.module.scss
@@ -71,8 +71,8 @@ $border-color: #2a2a4a;
 }
 
 .telegramIcon {
-  width: 36px;
-  height: 36px;
+  width: 42px;
+  height: 42px;
   position: relative;
   z-index: 1;
 }
@@ -207,8 +207,8 @@ $border-color: #2a2a4a;
   }
 
   .telegramIcon {
-    width: 32px;
-    height: 32px;
+    width: 36px;
+    height: 36px;
   }
 
   .popup {
